<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:alpha="0.54"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout style="@style/DashboardStatusRelativeLayout">

            <ImageView
                android:id="@+id/icObdWasherFluid"
                style="@style/DashboardStatusIcon"
                android:src="@drawable/ic_obd_washer_fluid" />

            <TextView
                android:id="@+id/clean"
                style="@style/DashboardStatusText"
                android:layout_toRightOf="@+id/icObdWasherFluid"
                android:text="@string/washer_info" />

        </RelativeLayout>

        <RelativeLayout style="@style/DashboardStatusRelativeLayout">

            <ImageView
                android:id="@+id/icObdSeatBelt"
                style="@style/DashboardStatusIcon"
                android:src="@drawable/ic_obd_seat_belt" />

            <TextView
                android:id="@+id/safety_salt"
                style="@style/DashboardStatusText"
                android:layout_toRightOf="@+id/icObdSeatBelt"
                android:text="@string/safety_salt_info" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout style="@style/DashboardStatusRelativeLayout">

            <ImageView
                android:id="@+id/icObdBattery"
                style="@style/DashboardStatusIcon"
                android:src="@drawable/ic_obd_battery" />

            <TextView
                android:id="@+id/battery"
                style="@style/DashboardStatusText"
                android:layout_toRightOf="@+id/icObdBattery"
                android:text="@string/battery_info" />

        </RelativeLayout>

        <RelativeLayout style="@style/DashboardStatusRelativeLayout">

            <ImageView
                android:id="@+id/icObdHandBrake"
                style="@style/DashboardStatusIcon"
                android:src="@drawable/ic_obd_hand_brake" />

            <TextView
                android:id="@+id/handbrake"
                style="@style/DashboardStatusText"
                android:layout_toRightOf="@+id/icObdHandBrake"
                android:text="@string/handbrake_info" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
